# cursed

./: .gitlab-ci.yml  .ycm_extra_conf.py  Alignment.cpp  Alignment.hpp  Application.cpp  Application.hpp  Border.hpp  BoxLayout.cpp  BoxLayout.hpp  BoxStyle.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CheckBox.cpp  CheckBox.hpp  CodingStandards.md  Color.cpp  Color.hpp  ConsoleMode.cpp  ConsoleMode.hpp  DefaultListItemDelegate.cpp  DefaultListItemDelegate.hpp  Dimension.hpp  Direction.cpp  Direction.hpp  Draw.cpp  Draw.hpp  FDEventHandler.hpp  Forward.hpp  IDrawWindowDelegate.hpp  IFileEventHandler.hpp  ILayout.hpp  IListItemDelegate.hpp  IListModel.cpp  IListModel.hpp  ISSUES.md  IWindow.hpp  ItemDelegate.hpp  Label.cpp  Label.hpp  (+57 more)
examples/: example_buttons.cpp  example_line_edit.cpp  example_simple_application.cpp
tests/: test_Point.cpp
